# dayone

./: .env.example  .gitignore  AI_AGENT_CONTEXT.md  Dockerfile  README.md  WORKSHOP_OBJECTIVES.md  Workshop_plan.md  pyproject.toml  requirements.txt
.aws-samples/sample-strands-agentcore-starter/chatapp/: .env.example  .gitignore  Dockerfile  Dockerfile.lambda  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  sync-env.py  sync-env.sh  workbook.md
.aws-samples/sample-strands-agentcore-starter/chatapp/app/: __init__.py  config.py  main.py  templates_config.py
.aws-samples/sample-strands-agentcore-starter/chatapp/app/admin/: __init__.py  cost_calculator.py  evaluation_repository.py  feedback_repository.py  guardrail_repository.py  repository.py  runtime_usage_repository.py
.aws-samples/sample-strands-agentcore-starter/chatapp/app/agentcore/: __init__.py  client.py  memory.py
.aws-samples/sample-strands-agentcore-starter/chatapp/app/auth/: __init__.py  cognito.py  middleware.py
.aws-samples/sample-strands-agentcore-starter/chatapp/app/evaluations/: __init__.py  capabilities.py  config.py  engine.py  evaluators.py
.aws-samples/sample-strands-agentcore-starter/chatapp/app/helpers/: __init__.py  model_catalog.py  observability.py  settings.py
.aws-samples/sample-strands-agentcore-starter/chatapp/scripts/: clear_usage_tables.py  create-user.sh  generate_test_data.py
.aws-samples/sample-strands-agentcore-starter/chatapp/tests/: __init__.py  test_auth.py  test_cost_calculator.py  test_helpers.py  test_models.py  test_routes.py  test_session.py
(+150 files in other folders)
